<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_helper"
                android:textAppearance="@style/bodyText"
                android:id="@+id/calculation_title"
                android:textStyle="bold"
                android:layout_margin="@dimen/body_margin"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/calculation_details"
                android:text="@string/calc_details"
                android:textAppearance="@style/bodyText"
                android:layout_margin="@dimen/body_margin"
                android:gravity="center"
                android:padding="20dp"
                app:layout_constraintTop_toTopOf="@+id/calculation_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_timestamp"
                android:textAppearance="@style/bodyText"
                android:id="@+id/calculation_time"
                android:layout_margin="@dimen/body_margin"

                app:layout_constraintTop_toBottomOf="@id/calculation_details"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>