<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingTop="45dp"
    android:paddingBottom="45dp"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/function_card_fib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/card_one_output"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/body_margin">


            <ImageView
                android:id="@+id/helper_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:src="@drawable/ic_arrow_back_black_24dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/helper_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:src="@drawable/ic_arrow_forward_black_24dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/one_function_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/body_margin"
                android:text="@string/select_function"
                android:textAppearance="@style/bodyText"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"


                />

            <EditText
                android:id="@+id/n_value_fib"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_edit_text"
                android:hint="@string/value_n"
                android:inputType="number"

                android:maxLength="10"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"

                app:layout_constraintBottom_toTopOf="@+id/calculate_fib"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/one_function_name"

                />

            <Button
                android:id="@+id/calculate_fib"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/calculate"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/n_value_fib"

                />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_one_output"


        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"

        app:layout_constraintTop_toBottomOf="@id/function_card_fib"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/output"
                android:id="@+id/text_output"
                android:textColor="@color/black"

                android:layout_marginTop="@dimen/body_margin"
                android:layout_marginBottom="5dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/one_output_text"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/one_output_text"
                android:text=""
                android:textColor="@color/black"
                android:gravity="center"
                android:paddingStart="@dimen/body_margin"
                android:paddingEnd="@dimen/body_margin"

                android:layout_marginTop="5dp"
                android:layout_marginBottom="@dimen/body_margin"

                app:layout_constraintTop_toBottomOf="@+id/text_output"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/related_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/related_calculations"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/card_one_output"

        />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/related_text"
        android:layout_marginTop="10dp"

        android:padding="5dp"


        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_related_helper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>


</ScrollView>